--- a/index.html
+++ b/index.html
@@ -4,31 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
     <title>Dice Game</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
 
-    <section id="header" class="row centered">
-        <div class="header">
-            <h1>Hello World</h1>
+    <div class="container-fluid">
+        <div id="header" class="row">
+            <h1>Dice Game</h1>
+            <button class="button">Roll Dice!</button>
         </div>
-    </section>
+    </div>
 
-    <section id="dice-row" class="row">
-        <div class="dice-col col-lg-6 col-md-6">
-            <h3>Player 1</h3>
-            <div>Dice Image</div>
+
+    <div id="dice-row" class="row text-right">
+        <div class="col-lg-6 col-md-6">
+            <div class="dice-col left-col">
+                <h3>Player 1</h3>
+                <div>Dice Image</div>
+            </div>
+
         </div>
 
-        <div class="dice-col col-lg-6 col-md-6">
-            <h3>Player 1</h3>
-            <div>Dice Image</div>
+        <div class="dice-col col-lg-6 col-md-6 text-left">
+            <div class="dice-col right-col">
+                <h3>Player 1</h3>
+                <div>Dice Image</div>
+            </div>
         </div>
-    </section>
+    </div>
 
 
     <script src="index.js" charset="utf-8"></script>
