--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <div id="header" class="row">
             <h1>Dice Game</h1>
-            <button class="button">Roll Dice!</button>
+            <button class="button" id="rollthedice">Roll Dice!</button>
         </div>
     </div>
 
@@ -27,15 +27,15 @@
         <div class="col-lg-6 col-md-6">
             <div class="dice-col left-col">
                 <h3>Player 1</h3>
-                <div>Dice Image</div>
+                <div id="dieOne" class="die-one"></div>
             </div>
 
         </div>
 
         <div class="dice-col col-lg-6 col-md-6 text-left">
             <div class="dice-col right-col">
-                <h3>Player 1</h3>
-                <div>Dice Image</div>
+                <h3>Player 2</h3>
+                <div id="dieTwo" class="die-six"></div>
             </div>
         </div>
     </div>
