--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <div class="container-fluid">
         <div id="header" class="row">
-            <h1>Dice Game</h1>
+            <h1 id="heading">Dice Game</h1>
+            
             <button class="button" id="rollthedice">Roll Dice!</button>
         </div>
     </div>
