Styled button and highlighted winner with a crown

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="header" class="row">
             <h1 id="heading">Dice Game</h1>
             
-            <button class="button" id="rollthedice">Roll Dice!</button>
+            <button class="button btn btn-dark" id="rollthedice">Roll Dice!</button>
         </div>
     </div>
 
